--- a/test/scss/_app.general.scss
+++ b/test/scss/_app.general.scss
@@ -13,6 +13,7 @@ html {
 body {
     height: 100%;
     font-family: Helvetica, Arial, sans-serif;
+    font-size: 12px;
     background: #777777;
 }
 
